<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dbexel</groupId>
	<artifactId>DBEXEL</artifactId>
	<version>1.3-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>DBEXEL</name>

	<properties>
		<struts2.version>2.5.31</struts2.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-core</artifactId>
			<version>${struts2.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-config-browser-plugin</artifactId>
			<version>${struts2.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-junit-plugin</artifactId>
			<version>${struts2.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-integration</artifactId>
			<version>1.3</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.14.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbynet</artifactId>
			<version>10.8.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbyclient</artifactId>
			<version>10.8.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>3.6.9.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.0-api</artifactId>
			<version>1.0.0.Final</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>2.37.0</version>
		</dependency>
		<dependency>
			<groupId>com.jgeppert.struts2.jquery</groupId>
			<artifactId>struts2-jquery-plugin</artifactId>
			<version>3.5.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>tomcat6-maven-plugin</artifactId> 
				<configuration> <fork>true</fork> </configuration> <executions> <execution> 
				<id>run-tomcat</id> <phase>pre-integration-test</phase> <goals> <goal>run</goal> 
				</goals> </execution> </executions> </plugin> -->
			<!-- -->

			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>

				<artifactId>tomcat6-maven-plugin</artifactId>


				<version>2.0</version>
				<configuration>
					<charset>UTF-8</charset>
					<systemProperties>
						<JAVA_OPTS>"-Xmx150m -XX:MaxPermSize=128m -XX:NewRatio=6
							-XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled
							-verbose:gc"</JAVA_OPTS>
					</systemProperties>
				</configuration>

				<executions>
					<execution>
						<id>run-tomcat</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<fork>true</fork>
						</configuration>
					</execution>
					<execution>
						<id>tomcat-shutdown</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>shutdown</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<skip>true</skip>
					<forkMode>always</forkMode>
				</configuration>
				<executions>
					<execution>
						<id>unit-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!-- Never skip running the tests when the test phase is invoked -->
							<skip>false</skip>
							<includes>
								<!-- Include unit tests within integation-test phase. -->
								<include>**/mapping/*.java</include>
								<include>**/actions/*.java</include>
							</includes>
							<excludes><!-- Exclude integration tests within (unit) test phase. -->
								<exclude>**/aat/*.java</exclude>
								<exclude>**/dao/*.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>integration-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!-- Never skip running the tests when the test phase is invoked -->
							<skip>false</skip>

							<excludes>
								<!-- Include unit tests within integation-test phase. -->
								<include>**/mapping/*.java</include>
								<include>**/actions/*.java</include>
							</excludes>

							<includes>
								<!-- Exclude integration tests within (unit) test phase. -->
								<exclude>**/aat/*.java</exclude>
								<exclude>**/aat/bis/*.java</exclude>
								<exclude>**/dao/*.java</exclude>
							</includes>

						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
